Add Peer Review Teams for Project 1

--- a/project/project-1.qmd
+++ b/project/project-1.qmd
@@ -60,7 +60,7 @@ The reviewer / reviewee assignments will be posted below:
 
 library(tidyverse)
 library(gt)
-p1_pr <- read_csv("project-1-peer-review.csv")
+p1_pr <- read_csv("project_1_peer_review_teams.csv")
 gt(p1_pr)
 ```
 
