Evaluate peer review code chunk

--- a/project/project-1.qmd
+++ b/project/project-1.qmd
@@ -56,7 +56,7 @@ The reviewer / reviewee assignments will be posted below:
 ```{r}
 #| message: false
 #| echo: false
-#| eval: false
+#| eval: true
 
 library(tidyverse)
 library(gt)
