--- a/hw/hw-2-draft.qmd
+++ b/hw/hw-2-draft.qmd
@@ -1,6 +1,8 @@
 ---
 title: "HW 2"
 subtitle: "Add title"
+execute: 
+  eval: false
 ---
 
 For any exercise where you’re writing code, insert a code chunk and make sure to label the chunk. Use a short and informative label. For any exercise where you’re creating a plot, make sure to label all axes, legends, etc. and give it an informative title. For any exercise where you’re including a description and/or interpretation, use full sentences. Make a commit at least after finishing each exercise, or better yet, more frequently. Push your work regularly to GitHub. Once you’re done, inspect your GitHub repo to make sure you've pushed all of your changes.
